--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>OLA - Jual Beli Online</title>
+	<title>Prabowo Wahyu Sudarno</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -77,7 +77,7 @@
 
 <!-- bagian Footer -->
 <div id="footer">
-	<p>copyright &copy; 2016 OLA.com Allright reserved </p>
+	<p>copyright &copy; 2016 Pemrograman Web Allright reserved </p>
 	
 </div>
 
